--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: zaika
 description: A new Flutter application.
 publish_to: 'none' #
-version: 1.0.4+12
+version: 1.0.5+13
 
 environment:
   sdk: ^3.4.4
@@ -75,6 +75,8 @@ dependencies:
   drift_flutter: ^0.2.1
   postgres: ^3.4.3
   drift_postgres: ^1.3.0
+  floating_draggable_widget: ^2.3.0
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
