--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   drift_postgres: ^1.3.0
   floating_draggable_widget: ^2.3.0
   lottie: ^3.3.1
+  rename: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -116,3 +117,4 @@ flutter:
           weight: 700
         - asset: assets/font/Roboto-Black.ttf
           weight: 900
+          
