--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,13 +16,13 @@ dependencies:
   get: ^4.6.6
   shared_preferences: ^2.3.4
   connectivity_plus: ^6.0.5
-  firebase_core: ^3.8.0
-  firebase_messaging: ^15.1.5
-  flutter_local_notifications: ^17.2.3
+  firebase_core: ^4.1.0
+  firebase_messaging: ^16.0.1
+  flutter_local_notifications: ^19.4.1
   path_provider: ^2.1.4
   url_strategy: ^0.3.0
   pin_code_fields: ^8.0.1
-  geolocator: ^13.0.1
+  geolocator: ^14.0.2
   google_maps_flutter: ^2.9.0
   google_maps_flutter_web: ^0.5.10
   carousel_slider: ^5.0.0
@@ -36,38 +36,38 @@ dependencies:
   phone_numbers_parser: ^9.0.1
   country_code_picker: ^3.0.0
   cached_network_image: ^3.4.1
-  google_sign_in: ^6.2.1
-  google_sign_in_web: ^0.12.4+2
-  flutter_facebook_auth: ^6.0.4
+  google_sign_in: ^7.1.1
+  google_sign_in_web: ^1.0.0
+  flutter_facebook_auth: ^7.1.2
   photo_view: ^0.15.0
-  dotted_border: ^2.1.0
-  share_plus: ^10.0.2
+  dotted_border: ^3.1.0
+  share_plus: ^11.1.0
   custom_map_markers: ^0.0.2+1
 #  image_compression_flutter: ^1.0.4
   card_swiper: ^3.0.1
   expandable_bottom_sheet: ^1.1.1+1
 #  uni_links: ^0.5.1
-  sign_in_with_apple: ^6.1.1
-  intl: ^0.19.0
-  flutter_slidable: ^3.1.2
+  sign_in_with_apple: ^7.0.1
+  intl: ^0.20.2
+  flutter_slidable: ^4.0.1
   just_the_tooltip: ^0.0.12
   animated_flip_counter: ^0.3.4
   meta_seo: ^3.0.9
   marquee: ^2.2.3
-  syncfusion_flutter_datepicker: ^27.1.51
+  syncfusion_flutter_datepicker: ^30.2.7
 #  firebase_crashlytics: ^4.0.4
-  file_picker: ^8.1.2
+  file_picker: ^10.3.2
   path: ^1.9.0
   http_parser: ^4.1.0
   flutter_svg: ^2.0.10+1
   custom_info_window: ^1.0.1
-  flutter_widget_from_html_core: ^0.15.2
+  flutter_widget_from_html_core: ^0.17.0
   smooth_page_indicator: ^1.2.0+3
   video_player: ^2.9.2
   chewie: ^1.8.5
-  location: ^7.0.0
-  permission_handler: ^11.3.1
-  firebase_auth: ^5.3.1
+  location: ^8.0.1
+  permission_handler: ^12.0.1
+  firebase_auth: ^6.0.2
 
   wakelock_plus: ^1.2.8
   video_player_avfoundation: ^2.6.2
