--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: zaika
 description: A new Flutter application.
 publish_to: 'none' #
-version: 1.0.8+16
+version: 1.0.11+19
 
 environment:
   sdk: ^3.4.4
@@ -78,6 +78,7 @@ dependencies:
   floating_draggable_widget: ^2.3.0
   lottie: ^3.3.1
   rename: ^3.1.0
+  upgrader: ^12.1.0
 
 dev_dependencies:
   flutter_test:
